Somewhat fixed alignment

--- a/src/components/Pack/Card.module.sass
+++ b/src/components/Pack/Card.module.sass
@@ -118,6 +118,7 @@
     font-weight: 700
     text-transform: uppercase
     color: $gold
+    max-width: 38px
 
 .users
     display: flex
